--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -68,7 +68,7 @@ header .nav-close-btn  {
 
 @media only screen and (max-width: 1024px) {
 
-   
+
     header nav {
         position: fixed;
         top: 0;
@@ -83,6 +83,7 @@ header .nav-close-btn  {
         transition: 1s;
         transform: translateY(-100vh);
         background-color: var(--highlightColorLight);
+        font-size: x-large;
 
         }
 
@@ -107,8 +108,16 @@ header .nav-close-btn  {
     }
     }
 
+header .logo {
+    text-align: center;
+}
 
 main {
-    align-items: center;
+    text-align: center;
+    display: inline;
+    }
+footer {
+    text-align: center;
+    display: inline;
 
 }
